# rust-chess

./: Cargo.toml
benches/: perft_benchmark.rs
src/: bitboard.rs  main.rs
src/chess/: bitboard.rs  board.rs  fen.rs  game.rs  mod.rs  square.rs  state.rs
src/chess/bitboard/: bits.rs  lookup.rs  mod.rs  shift.rs
src/chess/move/: figures.rs  list.rs  lookup.rs  magic.rs  masks.rs  mod.rs  pawns.rs  type.rs
src/chess/moves/: lookup.rs  mod.rs
