[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
rstest = "0.13.0"
rand = "0.8.5"
lazy_static = "1.4.0"
thiserror = "1.0.31"
criterion = "0.3.6"
clap = { version = "3.2.15", features = ["derive"] }
anyhow = "1.0.58"

[profile.test]
opt-level = 3

[[bench]]
name = "perft_benchmark"
harness = false
